--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "mern-starter",
   "version": "1.0.0",
-  "description": "Boilerplate project for building Isomorphic apps using React and Redux",
+  "description": "Boilerplate project for building Iosmorphic apps using React and Redux",
   "scripts": {
-    "test": "node_modules/.bin/mocha shared/tests/*.spec.js --compilers js:babel-register",
-    "test:server": "node_modules/.bin/cross-env NODE_ENV=test PORT=8080 MONGO_URL=mongodb://localhost:27017/mern-test mocha --compilers js:babel-register --recursive server/tests/**/*.spec.js",
-    "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/nodemon index.js",
-    "start:prod": "node_modules/.bin/cross-env NODE_ENV=production node index.js",
+    "test": "mocha shared/tests/*.spec.js --compilers js:babel-register",
+    "test:server": "cross-env NODE_ENV=test PORT=8080 MONGO_URL=mongodb://localhost:27017/mern-test mocha --compilers js:babel-register --recursive server/tests/**/*.spec.js",
+    "start": "cross-env NODE_ENV=development nodemon index.js",
+    "start:prod": "cross-env NODE_ENV=production node index.js",
     "bs": "npm run clean && npm run build && npm run start:prod",
-    "minify": "cleancss -o static/css/app.min.css static/css/app.css",
-    "build": "node_modules/.bin/cross-env NODE_ENV=production webpack --config webpack.config.prod.js && npm run minify",
+    "minify": "sass styles/app.scss:static/css/app.css && cleancss -o static/css/app.min.css static/css/app.css",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js && npm run minify",
     "clean": "rimraf static/dist",
     "slate": "rimraf node_modules && npm install",
-    "lint": "node_modules/.bin/eslint client server shared"
+    "lint": "eslint shared client"
   },
-  "pre-commit": [
-    "lint",
-    "test",
-    "test:server"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hashnode/mern-starter.git"
@@ -32,17 +27,16 @@
   "dependencies": {
     "babel-core": "^6.4.5",
     "body-parser": "^1.14.2",
-    "cross-env": "^1.0.7",
     "cuid": "^1.3.8",
     "express": "^4.13.4",
     "history": "^1.17.0",
     "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.3.7",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-redux": "^4.1.2",
     "react-router": "^2.0.0-rc5",
-    "redux": "^3.5.2",
+    "redux": "^3.1.5",
     "redux-thunk": "^1.0.3",
     "sanitize-html": "^1.11.3",
     "slug": "^0.9.1"
@@ -51,16 +45,14 @@
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-react-constant-elements": "6.5.0",
-    "babel-plugin-transform-react-inline-elements": "6.6.5",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.4",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.0",
-    "babel-register": "^6.7.2",
+    "babel-register": "^6.4.3",
     "chai": "^3.5.0",
     "clean-css": "^3.4.9",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "css-modules-require-hook": "^2.1.0",
     "deep-freeze": "0.0.1",
@@ -71,17 +63,15 @@
     "expect-jsx": "^2.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^2.4.5",
-    "nodemon": "^1.9.1",
-    "pre-commit": "^1.1.2",
-    "react-addons-test-utils": "^15.0.1",
+    "node-sass": "^3.7.0",
+    "nodemon": "^1.9.0",
+    "react-addons-test-utils": "^0.14.7",
     "react-transform-hmr": "^1.0.1",
-    "redux-devtools": "^3.1.1",
-    "redux-devtools-dock-monitor": "^1.1.0",
-    "redux-devtools-log-monitor": "^1.0.4",
     "rimraf": "^2.5.1",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "supertest": "^1.1.0",
-    "webpack": "^1.12.12",
+    "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
   },
